tests/ui/consts/dangling_raw_ptr.stderr
error: encountered dangling pointer in final value of constant
  --> $DIR/dangling_raw_ptr.rs:1:1
   |
LL | const FOO: *const u32 = {
   | ^^^^^^^^^^^^^^^^^^^^^

error: encountered dangling pointer in final value of constant
  --> $DIR/dangling_raw_ptr.rs:11:1
   |
LL | const BAR: Union = {
   | ^^^^^^^^^^^^^^^^

error: encountered dangling pointer in final value of constant
  --> $DIR/dangling_raw_ptr.rs:17:1
   |
LL | const BAZ: Union = {
   | ^^^^^^^^^^^^^^^^

error: encountered dangling pointer in final value of constant
  --> $DIR/dangling_raw_ptr.rs:23:1
   |
LL | const FOOMP: *const u32 = {
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

